adding latest cars

--- a/src/components/searched_cars/styles.module.css
+++ b/src/components/searched_cars/styles.module.css
@@ -137,4 +137,7 @@ color: white;
   line-height: 28px;
   font-weight: 300;
 }
-
+.head_latest_cars{
+  margin-top: 100px;
+  text-align: center;
+}
