--- a/src/components/searched_cars/styles.module.css
+++ b/src/components/searched_cars/styles.module.css
@@ -67,11 +67,13 @@ color: white;
   
   border-radius:16px 16px 0 0;
   object-position: top;
- 
- overflow: hidden;
+  max-height: 220px;
+  overflow: hidden;
 }
 .car_img{
   
+  
+  object-fit: cover;
 }
 .description_container{
  margin: 16px 30px;
