--- a/src/components/sub_main/style.module.css
+++ b/src/components/sub_main/style.module.css
@@ -2,7 +2,7 @@
 
   position: relative;
   overflow: hidden;
-  width: 100%;
+  max-width: 100%;
   height: clamp(300px, 80%, 685px);
 
   background-color: rgba(238, 241, 251, 1);
@@ -28,7 +28,7 @@ text-align: center;
 }
 .search_container{
  
-
+  max-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items:center;
@@ -36,7 +36,7 @@ text-align: center;
   background-color:white;
   border-radius: 40px;
 
-  margin-top: 2.5rem;
+  margin-top: 2%;
 }
 .search_list{
   display: flex;
@@ -48,7 +48,7 @@ text-align: center;
 }
 .search_icon{
   margin: 0.5rem;
-
+  margin-left: auto;
   width: 55px;
   height: 55px;
 }
@@ -56,6 +56,78 @@ text-align: center;
  
   position: relative;
   top: 4rem;
+
+  max-width: 100%;
+  
  
 }
 
+@media (max-width:1200px) {
+  .header_container{
+    margin-top: 3rem;
+    
+  }
+  .main_header{
+    font-size: 50px;
+  }
+  .search_icon{
+    width: 40px;
+    height: 40px;
+  }
+  .car_background{
+    width: 75%;
+  }
+}
+@media (max-width: 992px) {
+  .main_header{
+    font-size: 40px;
+  }
+ 
+  .car_background{
+    width: 65%;
+  }
+  .search_item{
+    font-size: 12px;
+    margin-right: 3rem;
+  }
+ 
+}
+@media (max-width: 768px) {
+  .main_header{
+    font-size: 30px;
+  }
+  .header_text{
+    font-size: 14px;
+  }
+  .car_background{
+   display: none;
+  }
+  .search_container{
+    margin-bottom: 3rem;
+  }
+  .search_item{
+    font-size: 12px;
+    margin-right: 3rem;
+    
+  }
+ 
+}
+@media (max-width: 576px) {
+  .search_list{
+    display: none;
+  }
+  .search_container{
+    width: 250px;
+  }
+  .header_text{
+    font-size: 12px;
+  }
+  .main_header{
+    text-align: center;
+    font-size: 20px;
+  }
+  .search_icon{
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
