--- a/src/components/searched_cars/styles.module.css
+++ b/src/components/searched_cars/styles.module.css
@@ -1,6 +1,7 @@
 .main_header{
   text-transform: capitalize;
   margin: 5rem 240px ;
+  max-width: 100%;
 
 
 
@@ -46,7 +47,7 @@ li{
   width: 100%;
   display: flex;
   justify-content: center;
- 
+  flex-wrap: wrap;
   margin-top: 40px;
   
 }
@@ -64,15 +65,17 @@ border-radius:16px;
 color: white;
 }
 .img_container{
-  
   border-radius:16px 16px 0 0;
   object-position: top;
+  width: 100%;
   max-height: 220px;
   overflow: hidden;
 }
+
 .car_img{
   
-  
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 .description_container{
@@ -142,4 +145,95 @@ color: white;
 .head_latest_cars{
   margin-top: 100px;
   text-align: center;
+}
+@media  (max-width:1200px){
+  .head{
+    width: 100%;
+    font-size: 34px;
+  }
+ 
+}
+@media (max-width:992px) {
+  .main_header{
+    margin: auto;
+    margin-top: 30px;
+    text-align: center;
+  }
+  .head{
+    width: 100%;
+    font-size: 30px;
+    
+  }
+  .car_list{
+    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 12px;
+  }
+  .items_car{
+    font-size: 14px;
+  }
+  .car_item_footer{
+    margin: 10px 20px;
+    
+   
+  }
+}
+@media (max-width:768px) {
+  
+}
+@media (max-width:576px) {
+  .head{
+    width: 100%;
+    font-size: 20px;
+    
+  }
+  .items_car{
+    font-size: 12px;
+  }
+}
+
+/* for CARDS */
+
+@media  (max-width:1200px){
+  .search_car_container{
+    margin-top: 20px;
+  }
+}
+@media (max-width:992px) {
+ 
+}
+@media (max-width:768px) {
+}
+.search_car_container{
+max-width: 280px;
+height: 400px;
+margin: 10 15px ;
+
+}
+
+
+.car_name{
+  font-size: 14px;
+}
+.car_description{
+  font-size: 12px;
+}
+.car_detail {
+  font-size: 12px;
+}
+.car_dec{
+  margin-top: 4px;
+}
+.car_price{
+  font-size: 16px;
+}
+.submit_button{
+  font-size: 14px;
+}
+
+
+
+@media (max-width:576px) {
+
 }
