--- a/src/components/why_u_choose/style.module.css
+++ b/src/components/why_u_choose/style.module.css
@@ -1,46 +1,107 @@
-.main_container{
+.main_container {
   margin: auto;
   margin-top: 100px;
  
-
-  width: 90%;
-  height: clamp(330px, 430px, 500px);
-  background-color:#F9FBFC;
-  border-radius:16px
+  max-width: 90%;
+  height:auto;
+  background-color: #F9FBFC;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
 }
-.main_header{
+
+.main_header {
   display: flex;
   justify-content: center;
-
- padding-top: 100px;
-
-
-
+  padding-top: 100px;
   font-size: 40px;
   font-weight: bold;
   line-height: 40px;
-  
   text-transform: capitalize;
 }
-.card_container{
-  
+
+.card_container {
   display: flex;
   justify-content: space-evenly;
-  align-items:center;
-
-  margin: 30px 200px;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 30px 150px;
 }
-.card_name{
+
+.card_item {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  margin: 10px;
+  max-width: 280px;
+}
+
+.card_img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.card_name {
   margin-top: 10px;
   font-size: 20px;
-  font-weight: medium;
+  font-weight: 500; 
   line-height: 24px;
 }
-.card_description{
+
+.card_description {
   margin-top: 10px;
- 
   font-size: 15px;
   font-weight: 300;
   line-height: 27.8px;
+  
+}
+@media (max-width: 1667px) {
 
+}
+@media (max-width: 1200px) {
+  .main_header {
+    padding-top: 80px;
+    font-size: 36px;
+  }
+  .card_container {
+    margin: 30px 100px;
+  }
+}
+
+@media (max-width: 992px) {
+  .main_header {
+    padding-top: 60px;
+    font-size: 32px;
+  }
+  .card_container {
+    margin: 20px 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  .main_header {
+    padding-top: 40px;
+    font-size: 28px;
+  }
+  .card_container {
+    margin: 20px 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .main_header {
+    padding-top: 20px;
+    font-size: 24px;
+  }
+  .card_container {
+    margin: 10px 20px;
+    flex-direction: column;
+  }
+  .card_item {
+    max-width: 100%;
+  }
 }
