--- a/src/components/inspitarion/style.module.css
+++ b/src/components/inspitarion/style.module.css
@@ -1,9 +1,10 @@
 .inspiration_container{
   
-  margin: auto;
+  
   
   margin-top: 150px;
-  width: 72%;
+  margin-left: 260px;
+  max-width: 100%;
   
 }
 
@@ -26,10 +27,26 @@
   border-radius: 16px;
 
   padding: 24px 22px;
+
+  margin-left: 10px;
+}
+.button_item:first-child{
+  margin: 0;
 }
 .button_container{
-  width: 60%;
+  width: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
+ 
 
+}
+@media (max-width:1400px) {
+  .inspiration_container{
+    margin-left: 150px;
+  }
+}
+@media (max-width:1000px) {
+  .inspiration_container{
+    display:none;
+  }
 }
