add adaptive design for our team and blog

--- a/src/components/reviews/style.module.css
+++ b/src/components/reviews/style.module.css
@@ -1,63 +1,60 @@
 .reviews_container {
-  
   margin: auto;
   margin-top: 100px;
   max-width: 90%;
   background-color: #405FF2;
   padding: 10px; 
-  border-radius:16px;
+  border-radius: 16px;
 }
 
 .main_container {
-  margin: 70px 135px;
+  margin: 60px 135px;
   display: flex;
   justify-content: center; 
   align-items: center; 
-  flex-wrap: wrap; 
-
-  
+  flex-wrap: wrap;
 }
 
 .header_container {
-  flex:1;
+  flex: 1;
   text-align: left; 
-  color:white
-  
+  color: white;
 }
-.header{
+
+.header {
   margin-bottom: 20px;
   font-size: 40px;
   font-weight: 700;
   line-height: 40px;
-  
 }
-.text{
-  max-width:90%;
 
+.text {
+  max-width: 90%;
   font-size: 15px;
   font-weight: 400;
   line-height: 28px;
-
 }
+
 .reviews_list {
   display: flex;
   justify-content: center; 
   gap: 20px; 
-  flex:2;
-  
+  flex: 2;
 }
 
 .img {
   max-width: 100%;
   max-height: 100%;
 }
-@media (max-width:1700px) {
+
+@media (max-width: 1700px) {
   .reviews_img {
     width: 80%;
     height: 80%;
   }
 }
-@media (max-width:1250px) {
+
+@media (max-width: 1250px) {
   .header {
     font-size: 26px;
   }
@@ -69,25 +66,44 @@
     height: 70%;
   }
 }
+
 @media (max-width: 992px) {
   .main_container {
-    flex-direction: column; /* Stack items vertically */
-    margin: 40px 0; /* Adjust margins for smaller screens */
+    flex-direction: row; 
+    margin: 40px 0; 
   }
-
   .header {
     font-size: 24px;
   }
-
   .text {
     font-size: 12px;
   }
-
   .reviews_list {
-    flex-direction: column; /* Stack review items vertically */
-    gap: 15px; /* Adjust gap for better spacing */
+    gap: 15px;
   }
+  .reviews_img {
+    width: 50%;
+    height: 50%;
+  }
+}
 
+@media (max-width: 900px) {
+  .main_container {
+    flex-direction: column; 
+    margin: 40px 20px; 
+  }
+  .header_container {
+    margin-bottom: 20px; 
+  }
+  .header {
+    font-size: 28px;
+  }
+  .text {
+    font-size: 13px;
+  }
+  .reviews_list {
+    gap: 15px;
+  }
   .reviews_img {
     width: 50%;
     height: 50%;
@@ -95,6 +111,10 @@
 }
 
 @media (max-width: 768px) {
+  .main_container {
+    flex-direction: column; 
+    margin: 40px; 
+  }
   .header {
     font-size: 28px;
   }
@@ -114,6 +134,6 @@
     font-size: 12px;
   }
   .reviews_img {
-    max-width: 80px; /* Adjust image size for smaller screens */
+    display: none;
   }
 }
