--- a/src/components/latest_blog/style.module.css
+++ b/src/components/latest_blog/style.module.css
@@ -1,6 +1,6 @@
 .main_container {
   margin: auto;
-  width: 90%;
+  max-width: 90%;
 }
 
 .header {
@@ -16,12 +16,14 @@
 .card_container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .card_item {
   position: relative;
   margin: 0 15px;
-  max-width: 450px;
+  width: 33%;
+  max-height: 100%;
 }
 
 .card_tag {
@@ -36,7 +38,8 @@
 
 .card_img {
   border-radius: 16px;
-  width: 100%; 
+  width: 100%;
+  aspect-ratio: 16/10;
 }
 
 .img_label, .textblog {
@@ -44,12 +47,76 @@
   font-size: 16px;
   line-height: 28px;
   font-weight: 400;
- 
 }
 
 .textblog {
   font-size: 20px;
   font-weight: bold;
   line-height: 30px;
-  word-wrap: break-word; 
+  word-wrap: break-word;
+}
+
+@media (max-width: 1200px) {
+  .img_label {
+    font-size: 14px;
+  }
+  .textblog {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 996px) {
+  .main_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .card_container {
+    flex-wrap: wrap;
+    justify-content: center; 
+  }
+  .img_label {
+    font-size: 14px;
+  }
+  .textblog {
+    font-size: 16px;
+  }
+  .card_tag {
+    padding: 6px 13px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 768px) {
+  .card_item:last-child {
+    margin-top: 20px;
+  }
+  .card_tag {
+    display: none;
+  }
+  .img_label {
+    margin: 0;
+    font-size: 10px;
+  }
+  .textblog {
+    margin: 0;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 568px) {
+  .main_container {
+    display: flex;
+    justify-content: center;
+  }
+  .card_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card_item {
+    width: 100%; 
+    max-width: 90%;
+    margin: 10px 0; 
+  }
 }
