--- a/src/components/our_team/style.module.css
+++ b/src/components/our_team/style.module.css
@@ -1,42 +1,65 @@
-.main_container{
-  
+.main_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 100%;
 }
-.main_header{
+
+.main_header {
   margin-top: 115px;
   margin-bottom: 25px;
   text-align: center;
-
   font-size: 40px;
   font-weight: bold;
   line-height: 40px;
-
   text-transform: capitalize;
 }
-.card_container{
+
+.card_container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  max-width: 100%;
+  max-height: 100%;
 }
-.card_item{
+
+.card_item {
   position: relative;
-  margin:0 15px ;
-  
+  margin: 0 15px;
+  max-width: 100%;
+  max-height: 100%;
+ 
 }
-.text_container{
+img{
+  max-width: 100%;
+  max-height: 100%;
+}
+.text_container {
   width: 100%;
   text-align: center;
-position: absolute;
-top: 25px;
-left: 50%;
-transform: translateX(-50%);
-
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  transform: translateX(-50%);
 }
-.header{
+
+.header {
   font-size: 20px;
   font-weight: medium;
   line-height: 24px;
 }
-.position{
+
+.position {
   font-size: 14px;
   font-weight: 300;
   line-height: 26px;
+}
+
+@media (max-width: 1200px) {
+  .main_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
 }
