--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -41,15 +41,18 @@ body {
   margin-right: 0.5rem;
 }
 
-.phone_number {
- width: 120px;
+.phone_number  {
+  
+    width: 120px;
+    white-space: nowrap; /* Prevent line breaks */
+  
 }
 
 .navigation_container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  
 }
 
 .navigation_list {
@@ -179,7 +182,8 @@ body {
   .main_logo {
     width: 90px;
     height: 22px;
-    margin-left: 1rem; 
+    
+    
   }
 
   .phone_logo {
@@ -188,7 +192,7 @@ body {
   }
 
   .phone_number {
-    margin-left: 1rem; 
+    margin-left: 0; 
   }
 
   .nav_text {
@@ -203,6 +207,7 @@ body {
   }
 }
 @media (max-width: 992px) {
+  
   .burger_menu {
     display: flex;
   }
@@ -216,6 +221,7 @@ body {
   }
 }
 @media (max-width: 768px) {
+  
   .header_container {
     padding: 0 1rem;
   }
