--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -20,6 +20,7 @@ body {
   align-items: center;
   font-weight: 500;
   font-size: 15px;
+  position: relative;
 }
 
 .logo_container {
@@ -57,8 +58,8 @@ body {
 
 .navigation_list {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  left: 40%;
   list-style-type: none;
   flex-grow: 1;
   margin: 0;
@@ -138,7 +139,7 @@ body {
 .fullscreen_menu {
   position: fixed;
   top:0;
-  right: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
@@ -159,8 +160,13 @@ body {
 }
 .fullscreen_navigation_list {
   list-style-type: none;
-  text-align: center;
   padding: 0;
+  margin: 0; 
+  display: flex;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+  text-align: center;
 }
 
 .fullscreen_nav_text {
